--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ clap = { version = "4.5.2", features = ["derive"] }
 ntex = { version = "1.0", features = ["tokio"] }
 once_cell = "1.19.0"
 colored = "2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
