--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,45 +1,36 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug executable 'shrewdb'",
-            "cargo": {
-                "args": [
-                    "build",
-                    "--bin=shrewdb",
-                    "--package=shrewdb"
-                ],
-                "filter": {
-                    "name": "shrewdb",
-                    "kind": "bin"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug unit tests in executable 'shrewdb'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--bin=shrewdb",
-                    "--package=shrewdb"
-                ],
-                "filter": {
-                    "name": "shrewdb",
-                    "kind": "bin"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug executable 'shrewkv'",
+      "cargo": {
+        "args": ["build", "--bin=shrewkv", "--package=shrewkv"],
+        "filter": {
+          "name": "shrewkv",
+          "kind": "bin"
         }
-    ]
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug unit tests in executable 'shrewkv'",
+      "cargo": {
+        "args": ["test", "--no-run", "--bin=shrewkv", "--package=shrewkv"],
+        "filter": {
+          "name": "shrewkv",
+          "kind": "bin"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    }
+  ]
 }
